k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-web
  namespace: ENV_NAMESPACE
  labels:
    app: element-web
spec:
  type: ClusterIP
  selector:
    app: element-web
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
